fixed the bugs and errors and made collection widget

--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -14,14 +14,13 @@
       style="@style/StockSymbolTextStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:gravity="left|center_vertical"
-      tools:text="GOOG"
+      android:gravity="start|center_vertical"
       />
   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:gravity="right"
+      android:gravity="end"
       >
     <TextView
         android:contentDescription="@string/screen_Reader_price"
@@ -30,7 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="10sp"
-        tools:text="1000.00"
         />
     <TextView
         android:contentDescription="@string/screen_Reader_change"
@@ -41,7 +39,6 @@
         android:layout_height="wrap_content"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
-        tools:text="100%"
         />
   </LinearLayout>
 </LinearLayout>
